--- a/index.html
+++ b/index.html
@@ -1,16 +1,49 @@
-<head>
+<html lang="pt-BR">
+
+<header>
     <link rel="stylesheet" href="style.css" />
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet" />
+    <title>Aluraflix</title>
+</header>
 
 <body>
+    <header>ALURAFLIX</header>
+    <section>
 
-<header>ALURAFLIX</header>
+        <div class="chamada-texto">
+            <h1>- SOY LUNA MELHOR SÉRIE DISNEY CHANNEL? | VALE A PENA?</h1>
+            <p>#Soy Luna</p>
+        </div>
 
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-g3ykOQ06xc?si=lINWtPP8AY7OctQf"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
-<h1>- SOY LUNA MELHOR SÉRIE DISNEY CHANNEL? | VALE A PENA?</h1>
-<p>#Soy Luna</p>
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/-g3ykOQ06xc?si=lINWtPP8AY7OctQf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+    <section>
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=AUkmvnU7z14">
+                <img src="https://img.youtube.com/vi/AUkmvnU7z14/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=X90nt9qTSYA">
+                <img src="https://img.youtube.com/vi/X90nt9qTSYA/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=5cjD6jYMV3U">
+                <img src="https://img.youtube.com/vi/5cjD6jYMV3U/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=TVbEM2TN8v0">
+                <img src="https://img.youtube.com/vi/TVbEM2TN8v0/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
 </body>
+
+</html>
