--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>ALURAFLIX</header>
-    <section>
+    <section div class="chamada">
 
         <div class="chamada-texto">
             <h1>- SOY LUNA MELHOR SÉRIE DISNEY CHANNEL? | VALE A PENA?</h1>
@@ -27,7 +27,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=AUkmvnU7z14">
