--- a/index.html
+++ b/index.html
@@ -1,49 +1,24 @@
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html>
 
-<header>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet" />
-    <title>Aluraflix</title>
-</header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AluraBooks</title>
+    <link rel=”stylesheet” href=”styles.css”>
+    <link rel=”stylesheet” href=”reset.css”>
+</head>
 
 <body>
-    <header>ALURAFLIX</header>
-    <section div class="chamada">
+    <header class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        <a href="#"><img src="img/Favoritos.svg"></a>
+        <a href="#"><img src="img/Compras.svg"></a>
+        <a href="#"><img src="img/Usuario.svg"></a>
+        
+    </header>
 
-        <div class="chamada-texto">
-            <h1>- SOY LUNA MELHOR SÉRIE DISNEY CHANNEL? | VALE A PENA?</h1>
-            <p>#Soy Luna</p>
-        </div>
-
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-g3ykOQ06xc?si=lINWtPP8AY7OctQf"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-    </section>
-
-    <section class="categoria">
-        <h2>Filmes e séries</h2>
-        <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=AUkmvnU7z14">
-                <img src="https://img.youtube.com/vi/AUkmvnU7z14/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=X90nt9qTSYA">
-                <img src="https://img.youtube.com/vi/X90nt9qTSYA/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=5cjD6jYMV3U">
-                <img src="https://img.youtube.com/vi/5cjD6jYMV3U/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=TVbEM2TN8v0">
-                <img src="https://img.youtube.com/vi/TVbEM2TN8v0/maxresdefault.jpg" />
-            </a>
-        </div>
-    </section>
 </body>
 
 </html>
