--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
-    <link rel=”stylesheet” href=”styles.css”>
-    <link rel=”stylesheet” href=”reset.css”>
+    <link rel=”stylesheet” href=”reset.CSS”>
+    <link rel=”stylesheet” href=”style.css”>
 </head>
 
 <body>
     <header class="cabeçalho">
-        <span class="cabeçalho__menu-hamburguer"></span>
-        <img src="img/Logo.svg" alt="Logo da AluraBooks">
-        <a href="#"><img src="img/Favoritos.svg"></a>
-        <a href="#"><img src="img/Compras.svg"></a>
-        <a href="#"><img src="img/Usuario.svg"></a>
-        
+        <div class="container">
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        </div>
+        <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+        </div>
     </header>
 
 </body>
