--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
-            <span class="cabeçalho__menu-hamburguer"></span>
-            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
         </div>
         <div class="container">
             <a href="#"><img src="img/Favoritos.svg" alt="meus favoritos"></a>
